Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -165,6 +165,7 @@
         "-lMNyxheevNS",
         "W1bsY1TGewVw",
         "jz9aOmpkewVw",
+        "sYf1TsbxnTUM",
         "A1uz7OJKnZV5",
         "Juei-roPnbMe",
         "oqZ3i95jWOSr",
@@ -176,10 +177,12 @@
         "JzrdqUwXCVly",
         "9IktNkNQGUUH",
         "VOaWDLwIWXJf",
+        "HNMURhhYKntw",
         "Zfx8md_duDzl",
         "BBOyONnAphxq",
         "cwLrxQzg0oRG",
         "NOcjjp8g0oUZ",
+        "YoZ4CWbgRtfa",
         "uPXzp27pRtie",
         "NmN8u0qcRtlf",
         "rJALFDucRtoU",
@@ -222,9 +225,11 @@
         "nvyv1g8XQU4w",
         "Q_Mt6QbqQVLs",
         "CWT4iS2ert0S",
-        "jyPXRy8ZyCvz"
+        "jyPXRy8ZyCvz",
+        "ALUnbbrdfgjl",
+        "6kR76xLjXJBq"
       ],
-      "authorship_tag": "ABX9TyNTScnWfgCqpqqMZyJv8Vh7",
+      "authorship_tag": "ABX9TyNI+vwWd37CNKtv8umL/tvv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11624,7 +11629,7 @@
         "id": "YTYcjpPmy4pj"
       },
       "source": [
-        "#### "
+        "####  1311번(*)"
       ]
     },
     {
@@ -11633,11 +11638,46 @@
         "id": "bKiCbAb1y4pk"
       },
       "source": [
+        "### python : 시간 초과, pypy3 = 통과\n",
+        "### 코드 이해가 어려웠음.(한번 더 코드 review 진행 필요)\n",
+        "# https://vitriol95.github.io/posts/boj1311/\n",
+        "# https://ca.ramel.be/144\n",
+        "# 행을 n개의 작업 열을 비트 마스킹하여 진행, dp는 bottom-up 형식\n",
+        "# 비트마스크 111은 모두 일을 하고 있는상태, 101은 두번째 작업자가 정해지지 않은 상태.\n",
+        "\n",
         "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
+        "#sys.setrecursionlimit(int(1e9)). pypy3 풀이시 적으면 메모리 초과가 뜸.\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def dfs(x,visited):                 # DFS 함수 생성 (행, 방문 비트 마스크)\n",
+        "    global n, m, dp                     # 글로벌 변수 지정\n",
+        "    if visited == (1 << n) - 1:         # visited 즉, 모든 작업을 진행한 열에 진입하면\n",
+        "        return 0                            # 0 반환\n",
+        "    \n",
+        "    if dp[x][visited] != -1:            # 이미 계산한 비트 마스크이면\n",
+        "        return dp[x][visited]               # 계산된 값 반환\n",
+        "\n",
+        "    dp[x][visited] = float('inf')       # 해당 요소에 계산된 값이 들어 갈 수 있도록 최대값 입력\n",
+        "\n",
+        "    for i in range(n):                  # 행 수 만큼 반복\n",
+        "        if visited & (1 << i):              # 방문 비트마스크와 (1 << i) 작업이 겹치면\n",
+        "            continue                            # 다음 i 진행\n",
+        "        \n",
+        "        dp[x][visited] = min(dp[x][visited], dfs(x + 1, visited | (1 << i)) + m[x][i]) # 최소값\n",
+        "        \n",
+        "    return dp[x][visited]               # x행 visited 열 반환\n",
+        "\n",
+        "def main():                                     # 메인 함수\n",
+        "    global n, m, dp                                 # 글로벌 변수 지정\n",
+        "    n = int(input())                                # 정수 값 입력\n",
+        "\n",
+        "    m = []                                          # 행렬 담을 리스트 생성\n",
+        "    for _ in range(n):                              # 행렬 행 만큼 반복\n",
+        "        m.append(list(map(int, input().split())))       # 행렬 리스트에 정수 입력 값들 입력\n",
+        "    \n",
+        "    dp = [[-1] * (1 << n) for _ in range(n)]        # n행 2 ** n 열 생성\n",
+        "    \n",
+        "    print(dfs(0,0))                                 # 0,0 dfs 실행\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -12463,11 +12503,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MJyM9C81Rtfa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5f50a5bc-ae8a-4f1a-8b40-3da85d7c4520"
+        "id": "MJyM9C81Rtfa"
       },
       "source": [
         "### 이해는 되도 시원하게 해결은 아직 안됨.\n",
@@ -12509,22 +12545,7 @@
         "#k번째 짝에서 a가 가장 높은 수 "
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2 9\n",
-            "1 2 5 9 14 20 21 24 28\n",
-            "bad :  [0, 0, 16, 9, 1, 36, 25, 16, 9, 1, 0, 0]\n",
-            "prev :  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-            "current :  [-1, -1, inf, 9, 1, 1, 1, 1, -1, -1]\n",
-            "prev :  [-1, -1, inf, 9, 1, 1, 1, 1, -1, -1]\n",
-            "current :  [0, 0, 0, 0, 0, inf, 26, 17, 10, 2]\n",
-            "2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -14330,10 +14351,57 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1058번"
       ],
       "metadata": {
         "id": "6kR76xLjXJBq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():                                 # 메인 함수\n",
+        "    n = int(input())                            # 정수 입력\n",
+        "    m = [input().rstrip('\\n') for _ in range(n)]# n x n 행렬 입력\n",
+        "\n",
+        "    result = [[0] * n for _ in range(n)]        # 결과 n x n 행렬 생성\n",
+        "    \n",
+        "    for i in range(n):                          # 행 수 만큼 반복\n",
+        "        for j in range(n):                          # 열 수 만큼 반복\n",
+        "            if m[i][j] == 'Y':                          # i행, j열의 요소가 'Y'이면\n",
+        "                result[i][j] = 1                            # 결과 행렬에 1로 변경\n",
+        "                for k in range(n):                          # 열 수 만큼 반복\n",
+        "                    if m[j][k] == 'Y':                          # j행 k열의 값이 Y이면\n",
+        "                        result[i][k] = 1                            # 결과 행렬 i행 k열에 1로 업데이트\n",
+        "\n",
+        "    max = 0                                     # 최대 친구의 수\n",
+        "    for i in range(n):                          # 행 수만큼 반복\n",
+        "        result[i][i] = 0                            # 자기 자신은 친구로 취급 x 이므로 0으로 변경\n",
+        "        if max < sum(result[i]):                    # 최대 친구의 수가 결과행렬 i 행의 합계보다 작으면\n",
+        "            max = sum(result[i])                        # 해당 값으로 최대 친구의 수 업데이트\n",
+        "\n",
+        "    print(max)                                  # 최대 친구의 수 업데이트\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "yLX3V61zXJBr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "bdvgnEAYTsOp"
       }
     },
     {
@@ -14349,7 +14417,7 @@
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "yLX3V61zXJBr"
+        "id": "uJkfwRxDTsOp"
       },
       "execution_count": null,
       "outputs": []
