Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -229,7 +229,7 @@
         "ALUnbbrdfgjl",
         "6kR76xLjXJBq"
       ],
-      "authorship_tag": "ABX9TyNI+vwWd37CNKtv8umL/tvv",
+      "authorship_tag": "ABX9TyOpXARjtocAgGEzjHDQFA6W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -252,6 +252,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "omsqU4scfCpl"
+      },
+      "source": [
+        "## I.단계별 풀이"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':  # 스크립트 파일을 메인프로그램과 모듈로 사용 할 때를 구분하기 위한 용도\n",
@@ -262,15 +271,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "omsqU4scfCpl"
-      },
-      "source": [
-        "## I.단계별 풀이"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -14398,10 +14398,59 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1059번"
       ],
       "metadata": {
         "id": "bdvgnEAYTsOp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def count(start, end, n):\n",
+        "    res = 0\n",
+        "    for i in range(start+1, n+1): # 2\n",
+        "        for j in range(n, end):     # 2 7\n",
+        "            if i >= j:\n",
+        "                continue\n",
+        "            res += 1\n",
+        "    print(res)\n",
+        "\n",
+        "def main():\n",
+        "    l = int(input())\n",
+        "    s = list(map(int, input().split()))\n",
+        "    n = int(input())\n",
+        "\n",
+        "    s.sort()\n",
+        "    s = [0] + s\n",
+        "\n",
+        "    for i in range(l):\n",
+        "        if s[i] < n < s[i+1]:\n",
+        "            count(s[i],s[i+1],n)\n",
+        "            return\n",
+        "\n",
+        "    print(0)    # n이 포함된 구간이 없으면\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "uJkfwRxDTsOp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "Hh1tMP58_R_P"
       }
     },
     {
@@ -14417,7 +14466,7 @@
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "uJkfwRxDTsOp"
+        "id": "G4hQgnDp_R_U"
       },
       "execution_count": null,
       "outputs": []
