Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -168,7 +168,6 @@
         "sYf1TsbxnTUM",
         "A1uz7OJKnZV5",
         "Juei-roPnbMe",
-        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -226,10 +225,9 @@
         "Q_Mt6QbqQVLs",
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz",
-        "ALUnbbrdfgjl",
-        "6kR76xLjXJBq"
+        "ALUnbbrdfgjl"
       ],
-      "authorship_tag": "ABX9TyOpXARjtocAgGEzjHDQFA6W",
+      "authorship_tag": "ABX9TyN+IykvcuX3BSFJyHs1M9Li",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14447,10 +14445,77 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1063번"
       ],
       "metadata": {
         "id": "Hh1tMP58_R_P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    start, end, n = input().rstrip('\\n').split()\n",
+        "\n",
+        "    move = {'R' : [1,0],\n",
+        "            'L' : [-1,0],\n",
+        "            'B' : [0,-1],\n",
+        "            'T' : [0,1],\n",
+        "            'RT' : [1,1],\n",
+        "            'LT' : [-1,1],\n",
+        "            'RB' : [1,-1],\n",
+        "            'LB' : [-1,-1]}\n",
+        "\n",
+        "    columns = {'A':1,'B':2,'C':3,\n",
+        "               'D':4,'E':5,'F':6,\n",
+        "               'G':7,'H':8}\n",
+        "    \n",
+        "    king = [columns[start[0]], int(start[1])]\n",
+        "    stone = [columns[end[0]], int(end[1])]\n",
+        "\n",
+        "    for _ in range(int(n)):\n",
+        "        movement = move[input().rstrip('\\n')]\n",
+        "        curr_king = [king[0] + movement[0], king[1] + movement[1]]\n",
+        "        curr_stone = stone\n",
+        "\n",
+        "        if curr_king == curr_stone:\n",
+        "            curr_stone = [stone[0] + movement[0], stone[1] + movement[1]]\n",
+        "\n",
+        "        if 0 < curr_king[0] < 9 and 0 < curr_king[1] < 9:\n",
+        "            if 0 < curr_stone[0] < 9 and 0 < curr_stone[1] < 9:\n",
+        "                king = curr_king\n",
+        "                stone = curr_stone\n",
+        "    \n",
+        "    for k, v in columns.items():\n",
+        "        if v == king[0]:\n",
+        "            print(k,end='')\n",
+        "            print(king[1])\n",
+        "    \n",
+        "    for k, v in columns.items():\n",
+        "        if v == stone[0]:\n",
+        "            print(k,end='')\n",
+        "            print(stone[1])\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "G4hQgnDp_R_U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "6TLnmQh0IY6S"
       }
     },
     {
@@ -14466,7 +14531,7 @@
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "G4hQgnDp_R_U"
+        "id": "iT7NOJ6NIY6g"
       },
       "execution_count": null,
       "outputs": []
