--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -227,7 +227,7 @@
         "jyPXRy8ZyCvz",
         "ALUnbbrdfgjl"
       ],
-      "authorship_tag": "ABX9TyN+IykvcuX3BSFJyHs1M9Li",
+      "authorship_tag": "ABX9TyMNHjP7pQw2FXM9v8eDSzbG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14512,10 +14512,50 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####"
+        "#### 1072번"
       ],
       "metadata": {
         "id": "6TLnmQh0IY6S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "import math\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    x, y = map(int, input().split())\n",
+        "\n",
+        "    if x == y:\n",
+        "        print(-1)\n",
+        "        return\n",
+        "\n",
+        "    try:\n",
+        "        z = int(y * 100 / x)\n",
+        "        t = (x*z + x - 100*y) / (99 - z)\n",
+        "        print(math.ceil(t))\n",
+        "    except:\n",
+        "        print(-1)\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "metadata": {
+        "id": "iT7NOJ6NIY6g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####"
+      ],
+      "metadata": {
+        "id": "Gp00veVJRo8D"
       }
     },
     {
@@ -14531,7 +14571,7 @@
         "    main()                      # 메인 함수 실행"
       ],
       "metadata": {
-        "id": "iT7NOJ6NIY6g"
+        "id": "CjgMxsrTRo8H"
       },
       "execution_count": null,
       "outputs": []
