--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -227,7 +227,7 @@
         "jyPXRy8ZyCvz",
         "ALUnbbrdfgjl"
       ],
-      "authorship_tag": "ABX9TyMNHjP7pQw2FXM9v8eDSzbG",
+      "authorship_tag": "ABX9TyPYzoVXyHqY9TkrwrLOMydy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11689,7 +11689,7 @@
         "id": "0HVOrm1Ty47A"
       },
       "source": [
-        "#### "
+        "####  2098번"
       ]
     },
     {
@@ -11702,7 +11702,37 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def dfs(x,visited):                 # DFS 함수 생성 (행, 방문 비트 마스크)\n",
+        "    global n, m, dp                     # 글로벌 변수 지정\n",
+        "    if visited == (1 << n) - 1:         # visited 즉, 모든 작업을 진행한 열에 진입하면\n",
+        "        if m[x][0]:\n",
+        "            return m[x][0]\n",
+        "        else:\n",
+        "            return float('inf')                            # 0 반환\n",
+        "\n",
+        "    if dp[x][visited] != -1:            # 이미 계산한 비트 마스크이면\n",
+        "        return dp[x][visited]               # 계산된 값 반환\n",
+        "\n",
+        "    dp[x][visited] = float('inf')       # 해당 요소에 계산된 값이 들어 갈 수 있도록 최대값 입력\n",
+        "\n",
+        "    for i in range(n):                  # 행 수 만큼 반복\n",
+        "        if not m[x][i] or visited & (1 << i):  # 방문 비트마스크와 (1 << i) 작업이 겹치거나 경로가 없다면\n",
+        "            continue                            # 다음 i 진행\n",
+        "        \n",
+        "        dp[x][visited] = min(dp[x][visited], dfs(i, visited | (1 << i)) + m[x][i]) # 최소값\n",
+        "        \n",
+        "    return dp[x][visited]               # x행 visited 열 반환\n",
+        "\n",
+        "\n",
         "def main():\n",
+        "    global dp,n, m\n",
+        "    n = int(input())\n",
+        "    m = []\n",
+        "    for _ in range(n):\n",
+        "        m.append(list(map(int, input().split())))\n",
+        "    \n",
+        "    dp = [[-1]*(1 << n) for _ in range(n)]\n",
+        "    print(dfs(0,1))\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -14522,23 +14552,10 @@
       "cell_type": "code",
       "source": [
         "import sys\n",
-        "import math\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
-        "    x, y = map(int, input().split())\n",
-        "\n",
-        "    if x == y:\n",
-        "        print(-1)\n",
-        "        return\n",
-        "\n",
-        "    try:\n",
-        "        z = int(y * 100 / x)\n",
-        "        t = (x*z + x - 100*y) / (99 - z)\n",
-        "        print(math.ceil(t))\n",
-        "    except:\n",
-        "        print(-1)\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
