--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -166,8 +166,10 @@
         "W1bsY1TGewVw",
         "jz9aOmpkewVw",
         "sYf1TsbxnTUM",
+        "YTYcjpPmy4pj",
         "A1uz7OJKnZV5",
         "Juei-roPnbMe",
+        "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -225,9 +227,13 @@
         "Q_Mt6QbqQVLs",
         "CWT4iS2ert0S",
         "jyPXRy8ZyCvz",
-        "ALUnbbrdfgjl"
+        "ALUnbbrdfgjl",
+        "6kR76xLjXJBq",
+        "bdvgnEAYTsOp",
+        "Hh1tMP58_R_P",
+        "6TLnmQh0IY6S"
       ],
-      "authorship_tag": "ABX9TyPYzoVXyHqY9TkrwrLOMydy",
+      "authorship_tag": "ABX9TyMM++AVk20jR0tsH0+uCG1S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11746,7 +11752,7 @@
         "id": "Bw4gARpNy5BK"
       },
       "source": [
-        "#### "
+        "####  (*못건들임)1086번"
       ]
     },
     {
@@ -11755,6 +11761,8 @@
         "id": "FLEP6SoAy5BL"
       },
       "source": [
+        "# https://kibbomi.tistory.com/216\n",
+        "# https://vitriol95.github.io/posts/boj1086/\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
@@ -11773,7 +11781,7 @@
         "id": "pyr7Rk9ay5Hq"
       },
       "source": [
-        "#### "
+        "####  17404번"
       ]
     },
     {
@@ -11787,6 +11795,28 @@
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
+        "    global n, m, dp\n",
+        "    n = int(input())\n",
+        "    m = []\n",
+        "    for _ in range(n):\n",
+        "        m.append(list(map(int, input().split())))\n",
+        "    INF = float('inf')\n",
+        "\n",
+        "    result = INF\n",
+        "    for i in range(3):\n",
+        "        dp = [[INF] * 3 for _ in range(n)]\n",
+        "        dp[0][i] = m[0][i]\n",
+        "        for j in range(1, n):\n",
+        "            dp[j][0] = m[j][0] + min(dp[j-1][1], dp[j-1][2])\n",
+        "            dp[j][1] = m[j][1] + min(dp[j-1][0], dp[j-1][2])\n",
+        "            dp[j][2] = m[j][2] + min(dp[j-1][0], dp[j-1][1])\n",
+        "\n",
+        "        for j in range(3):\n",
+        "            if i == j:\n",
+        "                continue\n",
+        "            \n",
+        "            result = min(result, dp[-1][j])\n",
+        "    print(result)\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -11800,7 +11830,7 @@
         "id": "-93NIS8dy5NX"
       },
       "source": [
-        "#### "
+        "####  2482번"
       ]
     },
     {
@@ -11814,7 +11844,20 @@
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
-        "    \n",
+        "    n = int(input())\n",
+        "    k = int(input())\n",
+        "\n",
+        "    dp = [[0]*(n+1) for i in range(n+1)]\n",
+        "\n",
+        "    for i in range(n + 1):\n",
+        "        dp[i][0] = 1\n",
+        "        dp[i][1] = i\n",
+        "\n",
+        "    for i in range(3, n + 1):\n",
+        "        for j in range(2, int((i + 1) / 2)+1):\n",
+        "            dp[i][j] = (dp[i - 1][j] + dp[i - 2][j - 1]) % (int(1e9) + 3)\n",
+        "\n",
+        "    print((dp[n - 3][k - 1] + dp[n - 1][k]) % (int(1e9) + 3))\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
@@ -14439,29 +14482,29 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def count(start, end, n):\n",
-        "    res = 0\n",
-        "    for i in range(start+1, n+1): # 2\n",
-        "        for j in range(n, end):     # 2 7\n",
-        "            if i >= j:\n",
-        "                continue\n",
-        "            res += 1\n",
-        "    print(res)\n",
+        "def count(start, end, n):       # start와 end 사이에 n이 포함될 구간의 개수 count\n",
+        "    res = 0                         # 결과 변수 생성\n",
+        "    for i in range(start+1, n+1):   # 시작지점은 start 다음부터 n까지 진행\n",
+        "        for j in range(n, end):         # 마지막 지점은 end 이전까지 진행\n",
+        "            if i >= j:                      # 시작지점이 끝지점보다 크거나 같으면\n",
+        "                continue                        # continue\n",
+        "            res += 1                        # 결과값 1 증가\n",
+        "    print(res)                      # 결과 값 출력\n",
         "\n",
-        "def main():\n",
-        "    l = int(input())\n",
-        "    s = list(map(int, input().split()))\n",
-        "    n = int(input())\n",
+        "def main():                         # 메인 함수\n",
+        "    l = int(input())                    # 집합 s의 크기 입력\n",
+        "    s = list(map(int, input().split())) # 집합 s 입력\n",
+        "    n = int(input())                    # 정수 입력\n",
         "\n",
-        "    s.sort()\n",
-        "    s = [0] + s\n",
+        "    s.sort()                            # 집합 오름차순 정렬\n",
+        "    s = [0] + s                         # 첫번째 구간은 0 부터 시작\n",
         "\n",
-        "    for i in range(l):\n",
-        "        if s[i] < n < s[i+1]:\n",
-        "            count(s[i],s[i+1],n)\n",
-        "            return\n",
+        "    for i in range(l):                  # 집합의 크기 만큼 반복\n",
+        "        if s[i] < n < s[i+1]:               # 집합의 i번째와 i+1번째 구간 사이에 n이 포함되면\n",
+        "            count(s[i],s[i+1],n)                # 해당 구간에 n이 포함될 부분집합의 개수\n",
+        "            return                              # 메인 함수 종료\n",
         "\n",
-        "    print(0)    # n이 포함된 구간이 없으면\n",
+        "    print(0)                            # n이 포함된 구간이 없으면 0 출력\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -14488,47 +14531,47 @@
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
-        "    start, end, n = input().rstrip('\\n').split()\n",
+        "def main():                                                         # 메인 함수\n",
+        "    start, end, n = input().rstrip('\\n').split()                        # 킹과 돌의 위치 및 움직이는 횟수 입력\n",
         "\n",
-        "    move = {'R' : [1,0],\n",
-        "            'L' : [-1,0],\n",
-        "            'B' : [0,-1],\n",
-        "            'T' : [0,1],\n",
-        "            'RT' : [1,1],\n",
-        "            'LT' : [-1,1],\n",
-        "            'RB' : [1,-1],\n",
-        "            'LB' : [-1,-1]}\n",
+        "    move = {'R' : [1,0],                                                # 움직임 dict 생성,R 한칸 오른쪽\n",
+        "            'L' : [-1,0],                                               # L 한 칸 왼쪽\n",
+        "            'B' : [0,-1],                                               # B 한 칸 아래로\n",
+        "            'T' : [0,1],                                                # T 한 칸 위로\n",
+        "            'RT' : [1,1],                                               # RT 오른쪽 위 대각선으로\n",
+        "            'LT' : [-1,1],                                              # LT 왼쪽 위 대각선으로\n",
+        "            'RB' : [1,-1],                                              # RB 오른쪽 아래 대각선으로\n",
+        "            'LB' : [-1,-1]}                                             # LB 왼쪽 아래 대각선으로\n",
         "\n",
-        "    columns = {'A':1,'B':2,'C':3,\n",
-        "               'D':4,'E':5,'F':6,\n",
+        "    columns = {'A':1,'B':2,'C':3,                                       # 체스판의 열 dict 생성\n",
+        "               'D':4,'E':5,'F':6,                                       # 각 알파벳 순서대로\n",
         "               'G':7,'H':8}\n",
         "    \n",
-        "    king = [columns[start[0]], int(start[1])]\n",
-        "    stone = [columns[end[0]], int(end[1])]\n",
+        "    king = [columns[start[0]], int(start[1])]                           # 킹의 위치 정수형으로 변환\n",
+        "    stone = [columns[end[0]], int(end[1])]                              # 돌의 위치 정수형으로 변환\n",
         "\n",
-        "    for _ in range(int(n)):\n",
-        "        movement = move[input().rstrip('\\n')]\n",
-        "        curr_king = [king[0] + movement[0], king[1] + movement[1]]\n",
-        "        curr_stone = stone\n",
+        "    for _ in range(int(n)):                                             # 움직이는 횟수 만큼 반복\n",
+        "        movement = move[input().rstrip('\\n')]                               # 움직임 dict형태에서 가져옴\n",
+        "        curr_king = [king[0] + movement[0], king[1] + movement[1]]          # 움직인 킹의 위치\n",
+        "        curr_stone = stone                                                  # 현재 돌의 위치\n",
         "\n",
-        "        if curr_king == curr_stone:\n",
-        "            curr_stone = [stone[0] + movement[0], stone[1] + movement[1]]\n",
+        "        if curr_king == curr_stone:                                         # 킹을 움직였는데 돌과 같은 칸이라면\n",
+        "            curr_stone = [stone[0] + movement[0], stone[1] + movement[1]]       # 돌도 킹과 같이 움직임\n",
         "\n",
-        "        if 0 < curr_king[0] < 9 and 0 < curr_king[1] < 9:\n",
-        "            if 0 < curr_stone[0] < 9 and 0 < curr_stone[1] < 9:\n",
-        "                king = curr_king\n",
-        "                stone = curr_stone\n",
+        "        if 0 < curr_king[0] < 9 and 0 < curr_king[1] < 9:                   # 킹의 위치가 체스판 안에 있으면\n",
+        "            if 0 < curr_stone[0] < 9 and 0 < curr_stone[1] < 9:                 # 돌의 위치가 체스판 안에 있으면\n",
+        "                king = curr_king                                                    # 킹의 위치 현재 킹의 위치로 업데이트\n",
+        "                stone = curr_stone                                                  # 돌의 위치 현재 돌의 위치로 업데이트\n",
         "    \n",
-        "    for k, v in columns.items():\n",
-        "        if v == king[0]:\n",
-        "            print(k,end='')\n",
-        "            print(king[1])\n",
+        "    for k, v in columns.items():                                        # 열 dict를 keym value 형태로 반복\n",
+        "        if v == king[0]:                                                    # value의 값이 킹의 열과 같으면\n",
+        "            print(k,end='')                                                     # 킹의 열을 알파벳으로 변환하여 출력\n",
+        "            print(king[1])                                                      # 킹의 행 출력\n",
         "    \n",
-        "    for k, v in columns.items():\n",
-        "        if v == stone[0]:\n",
-        "            print(k,end='')\n",
-        "            print(stone[1])\n",
+        "    for k, v in columns.items():                                        # 열 dict를 keym value 형태로 반복\n",
+        "        if v == stone[0]:                                                   # value의 값이 돌의 열과 같으면\n",
+        "            print(k,end='')                                                     # 돌의 열을 알파벳으로 변환하여 출력\n",
+        "            print(stone[1])                                                     # 돌의 행 출력\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -14551,11 +14594,23 @@
     {
       "cell_type": "code",
       "source": [
-        "import sys\n",
+        "import sys, math\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def main():                         # 메인 함수\n",
+        "    x, y = map(int, input().split())    # 게임횟수, 이긴 게임 횟수 입력\n",
+        "\n",
+        "    if x == y:                          # x, y가 같으면\n",
+        "        print(-1)                           # z가 절대로 변하지 않으므로 -1 출력\n",
+        "        return                              # 메인 함수 종료\n",
+        "\n",
+        "    try:                                # error가 없으면\n",
+        "        z = int(y * 100 / x)                # 승룰 * 100 의 정수 (int((y / x)*100) 은 오답 처리 bc. 10 / 9 같은 정확한 값 입력이 안됨)\n",
+        "        t = (x*z + x - 100*y) / (99 - z)    # z + 1 = (y + t) * 100 / (x + t)의 방정식 풀이\n",
+        "        print(math.ceil(t))                 # t 값 올림 처리 하여 출력\n",
+        "    except:                             # error가 나오면(ex. 1 / 0 ZeroDivision)\n",
+        "        print(-1)                           # -1 출력\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
