Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -167,7 +167,6 @@
         "jz9aOmpkewVw",
         "sYf1TsbxnTUM",
         "YTYcjpPmy4pj",
-        "A1uz7OJKnZV5",
         "Juei-roPnbMe",
         "oqZ3i95jWOSr",
         "WzwUHBI4pjsC",
@@ -178,7 +177,6 @@
         "JzrdqUwXCVly",
         "9IktNkNQGUUH",
         "VOaWDLwIWXJf",
-        "HNMURhhYKntw",
         "Zfx8md_duDzl",
         "BBOyONnAphxq",
         "cwLrxQzg0oRG",
@@ -233,7 +231,7 @@
         "Hh1tMP58_R_P",
         "6TLnmQh0IY6S"
       ],
-      "authorship_tag": "ABX9TyMM++AVk20jR0tsH0+uCG1S",
+      "authorship_tag": "ABX9TyN/5HvNShCcaBM58vBUTGtH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11761,16 +11759,96 @@
         "id": "FLEP6SoAy5BL"
       },
       "source": [
-        "# https://kibbomi.tistory.com/216\n",
-        "# https://vitriol95.github.io/posts/boj1086/\n",
-        "import sys\n",
+        "# https://cantcoding.tistory.com/2\n",
+        "# 개인적으로 제일 어려움. 이해가 아직 덜 됨.\n",
+        "# pypy3 제출\n",
+        "\n",
+        "import sys, math\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
+        "def dfs(L,visit,rest):\n",
+        "    global dp, long, rm, k, n\n",
+        "\n",
+        "    if visit==(1<<n)-1:\n",
+        "        if rest==0:\n",
+        "            return 1\n",
+        "        else:\n",
+        "            return 0\n",
+        "    if dp[visit][rest]!=-1:\n",
+        "        return dp[visit][rest]\n",
+        "    for i in range(n):\n",
+        "        if visit&(1<<i)==0:\n",
+        "            dp[visit][rest]+=dfs(L+long[i],visit|(1<<i),(rest+rm[i][L])%k)\n",
+        "    dp[visit][rest]+=1\n",
+        "    return dp[visit][rest]\n",
+        "\n",
         "def main():\n",
+        "    global dp, long, rm, k, n\n",
+        "    n = int(input())\n",
+        "\n",
+        "    s = []\n",
+        "    for _ in range(n):\n",
+        "        s.append(int(input()))\n",
+        "    \n",
+        "    k = int(input())\n",
+        "\n",
+        "    dp = [[-1] * k for _ in range(1<<n)]\n",
+        "\n",
+        "    long = []\n",
+        "    for i in s:\n",
+        "        long.append(len(str(i)))\n",
+        "\n",
+        "    rm = [[-1]*(sum(long)) for _ in range(n)]\n",
+        "    for i in range(n):\n",
+        "        for j in range(sum(long)):\n",
+        "            rm[i][j] = s[i] * pow(10,j) % k #pow(s[i]*10,j,k)\n",
+        "    \n",
+        "    t = dfs(0,0,0)\n",
+        "\n",
+        "    if not t:\n",
+        "        print('0/1')\n",
+        "        return\n",
+        "\n",
+        "    denom = math.factorial(n)\n",
+        "    v = math.gcd(denom, dp[0][0])\n",
+        "    print(f'{t//v}/{denom//v}')\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
+        "    main()                      # 메인 함수 실행\n",
+        "\n",
+        "\n",
+        "'''\n",
+        "python3 정답\n",
+        "제출번호 : 36922500, 아이다 : teferi00\n",
+        "import math\n",
+        "\n",
+        "def main():\n",
+        "    N = int(input())\n",
+        "    nums = [input() for _ in range(N)]\n",
+        "    K = int(input())\n",
+        "\n",
+        "    num_mods = [(pow(10, len(num), K), int(num) % K) for num in nums]\n",
+        "    bits = [1 << x for x in range(N)]\n",
+        "    dp = [[0] * K for _ in range(1 << N)]\n",
+        "    dp[0][0] = 1\n",
+        "    for selected_cur, dp_cur in enumerate(dp):\n",
+        "        for bit, (p, q) in zip(bits, num_mods):\n",
+        "            if selected_cur & bit == 0:\n",
+        "                continue\n",
+        "            dp_prev = dp[selected_cur - bit]\n",
+        "            for i in range(K):\n",
+        "                dp_cur[(i * p + q) % K] += dp_prev[i]\n",
+        "\n",
+        "    denom = math.factorial(N)\n",
+        "    numer = dp[-1][0]\n",
+        "    g = math.gcd(denom, numer)\n",
+        "    print(f'{numer // g}/{denom // g}')\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()\n",
+        "'''"
       ],
       "execution_count": null,
       "outputs": []
@@ -11830,7 +11908,7 @@
         "id": "-93NIS8dy5NX"
       },
       "source": [
-        "####  2482번"
+        "####  (*)2482번"
       ]
     },
     {
@@ -11839,6 +11917,7 @@
         "id": "VoOQKLiKy5NY"
       },
       "source": [
+        "# https://ca.ramel.be/149\n",
         "import sys\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
@@ -11876,7 +11955,115 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "HNMURhhYKntw"
+      },
+      "source": [
+        "#### (*)1786번 : KMP 문제"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YQVWO7GVKm-a"
+      },
+      "source": [
+        "# -*- coding: utf-8 -*-\n",
+        "# UTF-8 encoding when using korean\n",
+        "\n",
+        "# boyer - mooer 알고리즘\n",
+        "t = input()\n",
+        "p = input()\n",
+        "\n",
+        "m = len(p)\n",
+        "q = [0] * m\n",
+        "\n",
+        "k = 0\n",
+        "\n",
+        "for i in range(1,m):\n",
+        "\twhile k > 0 and p[i] != p[k]:\n",
+        "\t\tk = q[k-1]\n",
+        "\tif p[i] == p[k]:\n",
+        "\t\tk += 1\n",
+        "\t\tq[i] = k\n",
+        "\n",
+        "#print(q) #[0,0,0,0,1,2,0]\n",
+        "# p # ABCDABD\n",
+        "res = []\n",
+        "\n",
+        "k = 0\n",
+        "for i in range(len(t)):\n",
+        "\t\n",
+        "\twhile k > 0 and t[i] != p[k]:\n",
+        "\t\tk = q[k-1]\n",
+        "\t\t\n",
+        "\tif t[i] == p[k]:\n",
+        "\t\tif k == m - 1:\n",
+        "\t\t\tres.append(i - m +2)\n",
+        "\t\t\tk = q[k]\n",
+        "\t\telse:\n",
+        "\t\t\tk += 1\n",
+        "\n",
+        "print(len(res))\n",
+        "print(*res)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "iOubY1LcnZV5"
+      },
+      "source": [
+        "####  4354번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6EJswhFQnZV5"
+      },
+      "source": [
+        "# KMP의 failure function을 활용하는 문제 1\n",
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():                             # 메인 함수\n",
+        "    while True:                             # 무한 반복\n",
+        "        t = input().rstrip('\\n')                # 문자열 입력\n",
+        "        if t == '.':                            # 입력값이 '.' 이면\n",
+        "            break                                   # 무한반복 종료\n",
+        "        \n",
+        "        l = len(t)                              # 문자열 길이 변수 생성\n",
+        "\n",
+        "        q = [0] * l                             # 문자열 match list 생성\n",
+        "        k = 0                                   # 비교하는 문자열의 \n",
+        "        for i in range(1,l):                    # KMP의 failure function\n",
+        "            while k > 0 and t[i] != t[k]:           # k가 양수이고 i와 k 인덱스의 값이 다르다면\n",
+        "                k = q[k-1]                              # k 는 q의 k-1 인덱스로 업데이트\n",
+        "\n",
+        "            if t[i] == t[k]:                    # i번째 인덱스와 k번째 인덱스가 같다면\n",
+        "                k += 1                              # k 1 증가\n",
+        "                q[i] = k                            # q의 i 번째 인덱스를 k로 업데이트\n",
+        "\n",
+        "        if q[-1] == max(q):                     # q의 마지막 값이 최댓값이고\n",
+        "            if l % (l - q[-1]):                     # l이 (l - max(q)로 나누어 지지 않는다면(ex.abcdabcdabc) \n",
+        "                print(1)                                # 1 출력\n",
+        "            else:                                   # 나누어지면\n",
+        "                print(l // (l - q[-1]))                 # 나눈 몫 출력\n",
+        "        else:                                   # 최댓값이 아니라면 특정 문자열 a의 제곱이 안되므로\n",
+        "            print(1)                                # 1 출력\n",
+        "\n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lwnpBG3RiuvV"
       },
       "source": [
         "#### "
@@ -11885,7 +12072,88 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6EJswhFQnZV5"
+        "id": "auQvVh4piuva"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gzlV0rJYiuyu"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KzjA2h7Giuyu"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LcszqBMxiu2r"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-D_rEavIiu2s"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TIrxMQ3fiu_k"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZTszpQumiu_l"
       },
       "source": [
         "import sys\n",
@@ -12339,63 +12607,6 @@
         "    return int(t)\n",
         " \n",
         "print(p2(int(input())))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HNMURhhYKntw"
-      },
-      "source": [
-        "#### (*)1786번 : KMP 문제"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YQVWO7GVKm-a"
-      },
-      "source": [
-        "# -*- coding: utf-8 -*-\n",
-        "# UTF-8 encoding when using korean\n",
-        "\n",
-        "# boyer - mooer 알고리즘\n",
-        "t = input()\n",
-        "p = input()\n",
-        "\n",
-        "m = len(p)\n",
-        "q = [0] * m\n",
-        "\n",
-        "k = 0\n",
-        "\n",
-        "for i in range(1,m):\n",
-        "\twhile k > 0 and p[i] != p[k]:\n",
-        "\t\tk = q[k-1]\n",
-        "\tif p[i] == p[k]:\n",
-        "\t\tk += 1\n",
-        "\t\tq[i] = k\n",
-        "\n",
-        "#print(q) #[0,0,0,0,1,2,0]\n",
-        "# p # ABCDABD\n",
-        "res = []\n",
-        "\n",
-        "k = 0\n",
-        "for i in range(len(t)):\n",
-        "\t\n",
-        "\twhile k > 0 and t[i] != p[k]:\n",
-        "\t\tk = q[k-1]\n",
-        "\t\t\n",
-        "\tif t[i] == p[k]:\n",
-        "\t\tif k == m - 1:\n",
-        "\t\t\tres.append(i - m +2)\n",
-        "\t\t\tk = q[k]\n",
-        "\t\telse:\n",
-        "\t\t\tk += 1\n",
-        "\n",
-        "print(len(res))\n",
-        "print(*res)"
       ],
       "execution_count": null,
       "outputs": []
