Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -231,7 +231,7 @@
         "Hh1tMP58_R_P",
         "6TLnmQh0IY6S"
       ],
-      "authorship_tag": "ABX9TyN/5HvNShCcaBM58vBUTGtH",
+      "authorship_tag": "ABX9TyM7xEmGlDUQxhAUXxct1ukf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11991,8 +11991,7 @@
         "res = []\n",
         "\n",
         "k = 0\n",
-        "for i in range(len(t)):\n",
-        "\t\n",
+        "for i in range(len(t)):\t\n",
         "\twhile k > 0 and t[i] != p[k]:\n",
         "\t\tk = q[k-1]\n",
         "\t\t\n",
@@ -12066,7 +12065,7 @@
         "id": "lwnpBG3RiuvV"
       },
       "source": [
-        "#### "
+        "####  1305번"
       ]
     },
     {
@@ -12080,7 +12079,22 @@
         "input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
+        "    l = int(input())\n",
+        "\n",
+        "    s = input().rstrip('\\n')\n",
+        "\n",
+        "    q = [0] * l # 접두사 prefix와 접미사 suffix가 같은 부분 문자열중 가장 긴 것\n",
+        "    k = 0\n",
+        "    for i in range(1,l):\n",
+        "        while k > 0 and s[i] != s[k]:\n",
+        "            k = q[k-1]\n",
+        "\n",
+        "        if s[i] == s[k]:\n",
+        "            k += 1\n",
+        "            q[i] = k\n",
         "    \n",
+        "    print(l-q[-1]) # 간단\n",
+        "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
       ],
@@ -12093,7 +12107,7 @@
         "id": "gzlV0rJYiuyu"
       },
       "source": [
-        "#### "
+        "#### ㅁ"
       ]
     },
     {
@@ -12181,114 +12195,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "yCKq7XEwyBY8"
-      },
-      "source": [
-        "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
-        "input = sys.stdin.readline\n",
-        "\n",
-        "def main():\n",
-        "    \n",
-        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WKQGrq77yBcS"
-      },
-      "source": [
-        "#### "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "L7sgCUVMyBcS"
-      },
-      "source": [
-        "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
-        "input = sys.stdin.readline\n",
-        "\n",
-        "def main():\n",
-        "    \n",
-        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WCQpwpYNyXE7"
-      },
-      "source": [
-        "#### "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-tV-4B1jyXE7"
-      },
-      "source": [
-        "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
-        "input = sys.stdin.readline\n",
-        "\n",
-        "def main():\n",
-        "    \n",
-        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jb-2uLJgyXNm"
-      },
-      "source": [
-        "#### "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Ty34vBzTyXNm"
-      },
-      "source": [
-        "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
-        "input = sys.stdin.readline\n",
-        "\n",
-        "def main():\n",
-        "    \n",
-        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "y2YExSSMyXVS"
-      },
-      "source": [
-        "#### "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Or9nH5PIyXVS"
       },
       "source": [
         "import sys\n",
